@@ -1,5 +1,5 @@
 .\" Automatically generated by Pod::Man version 1.02
-.\" Wed Sep  5 18:15:45 2001
+.\" Sun Jun  2 23:40:01 2002
 .\"
 .\" Standard preamble:
 .\" ======================================================================
@@ -138,7 +138,7 @@
 .\" ======================================================================
 .\"
 .IX Title "FVWM-MENU-HEADLINES 1"
-.TH FVWM-MENU-HEADLINES 1 "perl v5.6.0" "2001-09-05" "Fvwm Utility"
+.TH FVWM-MENU-HEADLINES 1 "perl v5.6.0" "2002-06-02" "FVWM Utilities"
 .UC
 .SH "NAME"
 fvwm-menu-headlines \- builds headlines menu definition for \s-1FVWM\s0
@@ -162,12 +162,13 @@ fvwm-menu-headlines \- builds headlines menu definition for \s-1FVWM\s0
 [ \fB\*(--proxy\fR|\fB\-p\fR host:port ]
 [ \fB\*(--file\fR [file] ]
 [ \fB\*(--fake\fR [file] ]
+[ \fB\*(--timeout\fR seconds ]
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
 This configurable perl script builds an fvwm menu definition for headlines
-of popular news web sites: FreshMeat, Slashdot, LinuxToday, Segfault, AppWatch,
-LinuxApps, JustLinux, DaemonNews, GNOME-News, KDE-News, FreeKDE, RootPrompt,
-LinuxFr and more.
+of popular news web sites: FreshMeat, Slashdot, LinuxToday, LinuxApps,
+DaemonNews, GNOME-News, KDE-News, RootPrompt,
+LinuxFr, ThinkGeek and more.
 .PP
 It is possible to specify a customized menu item format, change a command
 (usually launching a browser) and add menu icons (there is a support for
@@ -192,8 +193,9 @@ accordingly given in the following argument. Default is name
 .PP
 \&\fB\*(--item\fR, \fB\*(--exec\fR \- define menu item or exec format in the following
 argument (what is shown and what is executed when the item is chosen),
-default is '%h\et(%[%Y-%m-%d \f(CW%H:\fR%M])'. \s-1TAB\s0 can be specified as '\et', but
-in fvwmrc you should specify a double backslash or a real \s-1TAB\s0.
+default is '%h\et(%[%Y-%m-%d \f(CW%H:\fR%M])'.
+\&\s-1TAB\s0 can be specified as '\et', but in .fvwm2rc you should specify a double
+backslash or a real \s-1TAB\s0.
 .PP
 Format specifiers for a headline entry:
   \f(CW%h\fR \- headline
@@ -240,9 +242,12 @@ filename, the menu output is written to standard output.
 .PP
 \&\fB\*(--fake\fR [file] \- don't connect to the host using \s-1HTTP\s0 protocol, instead,
 read from \s-1WORK_HOME/SITE\s0.in file. The following reads input from
-segfault.in (downloaded http://segfault.org/stories.txt) and saves output
-to segfault.menu (both files are in \s-1WORK_HOME\s0):
-  fvwm-menu-headlines \-\-site segfault \-\-fake \-\-file
+freshmeat.in (downloaded http://freshmeat.net/backend/recentnews.txt) and
+saves output to segfault.menu (both files are in \s-1WORK_HOME\s0):
+  fvwm-menu-headlines \-\-site freshmeat \-\-fake \-\-file
+.PP
+\&\fB\*(--timeout\fR seconds \- limit a line reading from a socket to this timeout,
+the default timeout is 20 seconds.
 .PP
 \&\s-1WORK_HOME\s0 of this script is ~/.fvwm/.fvwm-menu-headlines.
 It is created if needed.
@@ -287,28 +292,24 @@ In this case your fvwm configuration lines could be:
 \&  AddToFunc   FuncFvwmMenuHeadlines
 \&  + I PipeRead "fvwm-menu-headlines --site $0"
 .Ve
-.Vb 12
+.Vb 10
 \&  DestroyMenu MenuHeadlines
 \&  AddToMenu   MenuHeadlines "Headlines" Title
 \&  + MissingSubmenuFunction FuncFvwmMenuHeadlines
 \&  + "FreshMeat"  Popup freshmeat
 \&  + "Slashdot"   Popup slashdot
 \&  + "LinuxToday" Popup linuxtoday
-\&  + "Segfault"   Popup segfault
-\&  + "AppWatch"   Popup appwatch
 \&  + "GNOME News" Popup gnome-news
 \&  + "KDE News"   Popup kde-news
 \&  + "" Nop
 \&  + "Reset all"  FuncResetHeadlines
 .Ve
-.Vb 9
+.Vb 7
 \&  DestroyFunc FuncResetHeadlines
 \&  AddToFunc   FuncResetHeadlines
 \&  + I DestroyMenu freshmeat
 \&  + I DestroyMenu linuxtoday
 \&  + I DestroyMenu slashdot
-\&  + I DestroyMenu segfault
-\&  + I DestroyMenu appwatch
 \&  + I DestroyMenu gnome-news
 \&  + I DestroyMenu kde-news
 .Ve
@@ -319,9 +320,9 @@ from a shell script. Every time you want headlines from some site, execute
 (give any additional options if you want):
 .PP
 .Vb 3
-\&  PipeRead "fvwm-menu-headlines --site segfault --name MenuHeadlinesSegfault"
-\&  # this will take several seconds, you may use: BusyCursor Read true
-\&  Popup MenuHeadlinesSegfault
+\&  PipeRead "fvwm-menu-headlines --site newsforge --name MenuHeadlinesNewsForge"
+\&  # this may take several seconds, you may use: BusyCursor Read true
+\&  Popup MenuHeadlinesNewsForge
 .Ve
 .SH "HOW TO ADD SITE HEADLINES"
 .IX Header "HOW TO ADD SITE HEADLINES"
