@@ -1,7 +1,7 @@
 #!@PERL@
 
 # Filter this script to pod2man to get a man page:
-#   pod2man -c "Fvwm Utility" fvwm-menu-headlines | nroff -man | less -e
+#   pod2man -c "FVWM Utilities" fvwm-menu-headlines | nroff -man | less -e
 
 require 5.002;
 use strict;
@@ -36,15 +36,17 @@ local $siteInfo = {
 		'func' => \&processLinuxToday,
 		'flds' => 'headline, url, date',
 	},
-	'segfault' => {
-		'name' => "Segfault",
+	# Segfault is empty now
+	'old-segfault' => {
+		'name' => "Old-Segfault",
 		'host' => "segfault.org",
 		'path' => "/stories.txt",
 		'func' => \&processSegfault,
 		'flds' => 'headline, url, date, author_name, author_email, type',
 	},
-	'appwatch' => {
-		'name' => "AppWatch",
+	# AppWatch was closed by ZDNet
+	'old-appwatch' => {
+		'name' => "Old-AppWatch",
 		'host' => "www.appwatch.com",
 		'path' => "/appwatch.rdf",
 		'func' => \&processPoorRdf,
@@ -57,8 +59,9 @@ local $siteInfo = {
 		'func' => \&processLinuxApps,
 		'flds' => 'headline, date, url',
 	},
-	'justlinux' => {
-		'name' => "JustLinux",
+	# JustLinux does not seem to exist any more
+	'old-justlinux' => {
+		'name' => "Old-JustLinux",
 		'host' => "www.justlinux.com",
 		'path' => "/backend/discussion.rdf",
 		'func' => \&processPoorRdf,
@@ -85,8 +88,9 @@ local $siteInfo = {
 		'func' => \&process_GNOME_KDE_News,
 		'flds' => 'title, link',
 	},
-	'freekde' => {
-		'name' => "FreeKDE",
+	# FreeKDE is temporarily (?) off
+	'old-freekde' => {
+		'name' => "Old-FreeKDE",
 		'host' => "freekde.org",
 		'path' => "/freekdeorg.rdf",
 		'func' => \&processFreeKDE,
@@ -101,10 +105,10 @@ local $siteInfo = {
 	},
 	'newsforge' => {
 		'name' => "NewsForge",
-		'host' => "www.newsforge.com",
+		'host' => "newsforge.com",
 		'path' => "/newsforge.xml",
 		'func' => \&processSlashdot,
-		'flds' => 'title, url, time, author, topic, comments, section, image, description',
+		'flds' => 'title, url, time, author, department, topic, comments, section, image',
 	},
 	'kuro5hin' => {
 		'name' => "Kuro5hin",
@@ -123,9 +127,11 @@ local $siteInfo = {
 	'linuxfr' => {
 		'name' => "LinuxFr",
 		'host' => "linuxfr.org",
-		'path' => "/short.php3",
+#		'path' => "/short.php3",
+		'path' => "/backend.rss",
 		'func' => \&processLinuxFr,
-		'flds' => 'headline, url, author_name, author_email, type',
+#		'flds' => 'headline, url, author_name, author_email, type',
+		'flds' => 'title, link',
 	},
 	'thinkgeek' => {
 		'name' => "ThinkGeek",
@@ -169,6 +175,7 @@ my $frontpage = undef;
 my @time  = localtime();
 my $menuFile = undef;
 my $fakeFile = undef;
+my $timeout = 20;
 my $endl = "\r\n";  # this is preferable for http sockets to "\n"
 
 GetOptions(
@@ -189,6 +196,7 @@ GetOptions(
 	"frontpage:s" => \$frontpage,
 	"file:s"   => \$menuFile,
 	"fake:s"   => \$fakeFile,
+	"timeout=i" => \$timeout,
 ) || wrongUsage();
 wrongUsage() if @ARGV;
 
@@ -285,8 +293,11 @@ unless (defined $fakeFile) {
 		print SOCK "GET $sitePath HTTP/1.1$httpHeaders";
 	}
 
+	dieNet("Unexpected HTTP response from http://$siteHost$sitePath", 0)
+		if readLine() !~ m{HTTP/1.1 200 OK}i;
+
 	# skip http response headers
-	while (<SOCK> !~ /^\r?\n$/s) {}
+	while (readLine() !~ /^\r?\n$/s) {}
 } else {
 	if ($fakeFile) {
 		$fakeFile =~ s:^~(/|$):$home$1:;
@@ -327,6 +338,20 @@ if (defined $menuFile) {
 exit();
 
 # ---------------------------------------------------------------------------
+
+sub readLine {
+	my $line;
+	local $SIG{ALRM} = sub { die "timeout\n"; };
+	alarm($timeout);
+	$line = eval { <SOCK> };
+	if ($@) {
+		dieNet("Timeout of $timeout seconds reached") if $@ eq "timeout\n";
+		dieNet($@);
+	}
+	alarm(0);
+	print STDERR $line if $ENV{"DEBUG_DUMP_RESPONSE"};
+	return $line;
+}
 
 # make unix time from year (2001 or 101), mon (0..11), day, hour, min, sec
 sub makeTime {  # ($$$$$$$)
@@ -372,8 +397,10 @@ sub processXml ($$$$) {
 	my $timeSub = shift;
 	my $hOffset = shift;
 	my @entries = ();
-	my $doc = join("", <SOCK>);
-	print STDERR $doc if $ENV{"DEBUG_DUMP_RESPONSE"};
+
+	my $doc = "";
+	my $line;
+	while ($line = readLine()) { $doc .= $line; }
 
 	ENTRY:
 	foreach ($doc =~ m!<$entryTag\b[^>]*>(.*?)</$entryTag>!sg) {
@@ -407,16 +434,9 @@ sub processText ($$$$) {
 	while (1) {
 		my $entry = {};
 		foreach (@$fields) {
-#			my $line = undef;
-#			### It waits 15 seconds until returning last undef :-(
-#			eval {
-#				local $SIG{ALRM} = sub { die "\n"; };
-#				alarm(1); $line = <SOCK>; alarm(0);
-#			};
-			my $line = <SOCK>;
+			my $line = readLine();
 			last ENTRY unless defined $line;
 			next if $_ eq '_ignore_';
-			print STDERR $line if $ENV{"DEBUG_DUMP_RESPONSE"};
 
 			chomp($line);
 			$line =~ s/"/\\"/g;
@@ -454,9 +474,10 @@ sub processFreshMeat () {
 }
 
 sub processLinuxToday () {
-	while (<SOCK>) {
-		last if /linuxtoday.com/;  # skip the text note
-		last if /&&/ and <SOCK> x 3;  # if the note was changed
+	my $line;
+	while ($line = readLine()) {
+		last if $line =~ /linuxtoday.com/;         # skip the text note
+		last if $line =~ /&&/ and readLine() x 3;  # if it was replaced
 	}
 	return processText(
 		[ qw( _ignore_ headline url date ) ],
@@ -469,8 +490,9 @@ sub processLinuxToday () {
 }
 
 sub processSegfault () {
-	while (<SOCK>) {
-		last if /^%%/;  # skip the text note
+	my $line;
+	while ($line = readLine()) {
+		last if $line =~ /^%%/;  # skip the text note
 	}
 	return processText(
 		[ qw( headline url date author_name author_email type _ignore_ ) ],
@@ -559,6 +581,25 @@ sub processKuro5hin () {
 
 sub processLinuxFr () {
 	my $linkToDate = sub ($) {
+		$_[0]->{'link'} =~ m|/(\d\d\d\d/\d\d/\d\d)/|; $1;
+	};
+	my $hackForUrl = sub ($) {
+		# hack for netscape -remote openURL
+		my $u = $_[0]->{'link'};
+		$u =~ s|,|\%2c|g; $u;
+	};
+	return processXml(
+		'item',
+		{ 'h' => 'title', 'u' => $hackForUrl, 'd' => $linkToDate },
+		sub ($) {
+			$_[0] =~ m|(\d+)/(\d+)/(\d+)|;
+			($1, ($2 || 0) - 1, $3);
+		}, +0,
+	);
+}
+
+sub processLinuxFr_old () {
+	my $linkToDate = sub ($) {
 		$_[0]->{'url'} =~ m|/(\d\d\d\d/\d\d/\d\d)/|; $1;
 	};
 	my $hackForUrl = sub ($) {
@@ -566,8 +607,9 @@ sub processLinuxFr () {
 		my $u = $_[0]->{'url'};
 		$u =~ s|,|\%2c|g; $u;
 	};
-	while (<SOCK>) {
-		last if /^%%/;  # skip the text note
+	my $line;
+	while ($line = readLine()) {
+		last if $line =~ /^%%/;  # skip the text note
 	}
 	return processText(
 		[ qw( headline url author_name author_email type _ignore_ ) ],
@@ -591,11 +633,12 @@ sub dieSys ($) {
 	exit(-1);
 }
 
-sub dieNet ($) {
+sub dieNet ($;$) {
 	my $msg = shift;
+	my $checkNetworkMsg = @_? "": "; check network connection";
 
 	#dieSys($msg);
-	$errorMenuContent =~ s/<msg>/$msg; check network connection/;
+	$errorMenuContent =~ s/<msg>/$msg$checkNetworkMsg/;
 	print $errorMenuContent;
 	exit(-1);
 }
@@ -659,6 +702,7 @@ sub showHelp {
 	print "\t--proxy=host[:port] specify proxy host and port (80)\n";
 	print "\t--file[=FILE]    menu file, default is $workHome/$site.menu\n";
 	print "\t--fake[=FILE]    don't connect, read input from file\n";
+	print "\t--timeout=SECS   timeout for a line reading from a socket\n";
 	print "Short options are ok if not ambiguous: -h, -t.\n";
 	exit 0;
 }
@@ -701,12 +745,13 @@ B<fvwm-menu-headlines>
 [ B<--proxy>|B<-p> host:port ]
 [ B<--file> [file] ]
 [ B<--fake> [file] ]
+[ B<--timeout> seconds ]
 
 =head1 DESCRIPTION
 
 This configurable perl script builds an fvwm menu definition for headlines
-of popular news web sites: FreshMeat, Slashdot, LinuxToday, Segfault, AppWatch,
-LinuxApps, JustLinux, DaemonNews, GNOME-News, KDE-News, FreeKDE, RootPrompt,
+of popular news web sites: FreshMeat, Slashdot, LinuxToday, LinuxApps,
+DaemonNews, GNOME-News, KDE-News, RootPrompt,
 LinuxFr, ThinkGeek and more.
 
 It is possible to specify a customized menu item format, change a command
@@ -733,8 +778,9 @@ accordingly given in the following argument. Default is name
 
 B<--item>, B<--exec> - define menu item or exec format in the following
 argument (what is shown and what is executed when the item is chosen),
-default is '%h\t(%[%Y-%m-%d %H:%M])'. TAB can be specified as '\t', but
-in fvwmrc you should specify a double backslash or a real TAB.
+default is '%h\t(%[%Y-%m-%d %H:%M])'.
+TAB can be specified as '\t', but in .fvwm2rc you should specify a double
+backslash or a real TAB.
 
 Format specifiers for a headline entry:
   %h - headline
@@ -781,9 +827,12 @@ filename, the menu output is written to standard output.
 
 B<--fake> [file] - don't connect to the host using HTTP protocol, instead,
 read from WORK_HOME/SITE.in file. The following reads input from
-segfault.in (downloaded http://segfault.org/stories.txt) and saves output
-to segfault.menu (both files are in WORK_HOME):
-  fvwm-menu-headlines --site segfault --fake --file
+freshmeat.in (downloaded http://freshmeat.net/backend/recentnews.txt) and
+saves output to segfault.menu (both files are in WORK_HOME):
+  fvwm-menu-headlines --site freshmeat --fake --file
+
+B<--timeout> seconds - limit a line reading from a socket to this timeout,
+the default timeout is 20 seconds.
 
 WORK_HOME of this script is ~/.fvwm/.fvwm-menu-headlines.
 It is created if needed.
@@ -831,8 +880,6 @@ In this case your fvwm configuration lines could be:
   + "FreshMeat"  Popup freshmeat
   + "Slashdot"   Popup slashdot
   + "LinuxToday" Popup linuxtoday
-  + "Segfault"   Popup segfault
-  + "AppWatch"   Popup appwatch
   + "GNOME News" Popup gnome-news
   + "KDE News"   Popup kde-news
   + "" Nop
@@ -843,8 +890,6 @@ In this case your fvwm configuration lines could be:
   + I DestroyMenu freshmeat
   + I DestroyMenu linuxtoday
   + I DestroyMenu slashdot
-  + I DestroyMenu segfault
-  + I DestroyMenu appwatch
   + I DestroyMenu gnome-news
   + I DestroyMenu kde-news
 
@@ -854,9 +899,9 @@ And finally, add "Popup MenuHeadlines" somewhere.
 from a shell script. Every time you want headlines from some site, execute
 (give any additional options if you want):
 
-  PipeRead "fvwm-menu-headlines --site segfault --name MenuHeadlinesSegfault"
-  # this will take several seconds, you may use: BusyCursor Read true
-  Popup MenuHeadlinesSegfault
+  PipeRead "fvwm-menu-headlines --site newsforge --name MenuHeadlinesNewsForge"
+  # this may take several seconds, you may use: BusyCursor Read true
+  Popup MenuHeadlinesNewsForge
 
 =head1 HOW TO ADD SITE HEADLINES
 
